--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/jest": "^24.0.18",
+    "@types/node": "^12.7.4",
+    "@types/react": "^16.9.2",
+    "@types/react-dom": "^16.9.0",
     "axios": "^0.19.0",
     "axios-rate-limit": "^1.1.0",
     "react": "^16.8.6",
@@ -10,6 +14,7 @@
     "react-hook-inview": "^4.0.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
+    "typescript": "^3.6.2",
     "use-react-router": "^1.0.7"
   },
   "scripts": {
@@ -35,6 +40,9 @@
     ]
   },
   "devDependencies": {
+    "eslint-config-prettier": "^6.2.0",
+    "eslint-plugin-prettier": "^3.1.0",
+    "prettier": "^1.18.2",
     "tailwindcss": "^1.0.5",
     "trakt.tv": "^7.2.0"
   }
