moved watch mode to url

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "typescript": "^3.6.2",
+    "use-query-params": "^0.4.1",
     "use-react-router": "^1.0.7"
   },
   "scripts": {
