--- a/package.json
+++ b/package.json
@@ -17,10 +17,9 @@
   "scripts": {
     "tailwind:css": "tailwind build src/tailwind.src.css -c  tailwind.js -o src/tailwind.css",
     "start": "npm run tailwind:css && react-scripts start",
-    "build": "npm run tailwind:css && react-scripts build",
+    "build": "npm run tailwind:css && postcss ./src/tailwind.src.css -o ./src/tailwind.css --env production && react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "postbuild": "purgecss --css build/static/css/*.css --content build/static/index.html build/static/js/*.js --out build/static/css"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -46,6 +45,7 @@
     "@types/react-router-dom": "^4.3.5",
     "eslint-config-prettier": "^6.2.0",
     "eslint-plugin-prettier": "^3.1.0",
+    "postcss-cli": "^6.1.3",
     "prettier": "^1.18.2",
     "tailwindcss": "^1.0.5",
     "trakt.tv": "^7.2.0"
