--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "use-react-router": "^1.0.7"
   },
   "scripts": {
-    "tailwind:css": "tailwind build src/tailwind.src.css -c  tailwind.js -o src/tailwind.css",
+    "tailwind:css": "tailwind build src/tailwind.src.css -c tailwind.js -o src/tailwind.css",
     "start": "npm run tailwind:css && react-scripts start",
-    "build": "npm run tailwind:css && postcss ./src/tailwind.src.css -o ./src/tailwind.css --env production && react-scripts build",
+    "build": "npm run tailwind:css && postcss ./src/tailwind.css -r --env production && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
