updated react-router & added some ts

--- a/package.json
+++ b/package.json
@@ -8,11 +8,10 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-hook-inview": "^4.0.0",
-    "react-router-dom": "^5.0.1",
+    "react-router-dom": "^5.1.1",
     "react-scripts": "3.0.1",
     "typescript": "^3.6.2",
-    "use-query-params": "^0.4.1",
-    "use-react-router": "^1.0.7"
+    "use-query-params": "^0.4.1"
   },
   "scripts": {
     "tailwind:css": "tailwind build src/tailwind.src.css -c tailwind.js -o src/tailwind.css",
@@ -42,7 +41,7 @@
     "@types/node": "^12.7.4",
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.9.0",
-    "@types/react-router-dom": "^4.3.5",
+    "@types/react-router-dom": "^5.1.0",
     "eslint-config-prettier": "^6.2.0",
     "eslint-plugin-prettier": "^3.1.0",
     "postcss-cli": "^6.1.3",
