--- a/.github/workflows/zeit.yml
+++ b/.github/workflows/zeit.yml
@@ -15,8 +15,4 @@ jobs:
         uses: amondnet/now-deployment@v1
         with: 
           zeit-token: ${{ secrets.ZEIT_TOKEN }}
-        env:
-          REACT_APP_TRAKT_API_KEY: ${{ secrets.REACT_APP_TRAKT_API_KEY }}
-          REACT_APP_CLIENT_SECRET: ${{ secrets.REACT_APP_CLIENT_SECRET }}
-          REACT_APP_TMDB_API_KEY: ${{ secrets.REACT_APP_TMDB_API_KEY }}
-          REACT_APP_REDIRECT_URL: ${{ secrets.REACT_APP_REDIRECT_URL }}
+          now-args: '-e REACT_APP_TRAKT_API_KEY=${{ secrets.REACT_APP_TRAKT_API_KEY }} -e REACT_APP_CLIENT_SECRET=${{ secrets.REACT_APP_CLIENT_SECRET }} -e REACT_APP_TMDB_API_KEY=${{ secrets.REACT_APP_TMDB_API_KEY }} -e REACT_APP_REDIRECT_URL=${{ secrets.REACT_APP_REDIRECT_URL }}'
