--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react-hook-inview": "^4.0.0",
     "react-router-dom": "^5.1.1",
     "react-scripts": "3.3.0",
-    "typescript": "^3.6.2",
+    "typescript": "3.7.2",
     "use-query-params": "^0.4.1"
   },
   "scripts": {
