--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "react-hook-inview": "^4.0.0",
     "react-router-dom": "^5.1.1",
     "react-scripts": "3.3.0",
-    "typescript": "3.7.2",
     "use-query-params": "^0.4.1"
   },
   "scripts": {
@@ -50,6 +49,7 @@
     "postcss-cli": "^6.1.3",
     "prettier": "^1.18.2",
     "tailwindcss": "^1.0.5",
-    "trakt.tv": "^7.2.0"
+    "trakt.tv": "^7.2.0",
+    "typescript": "3.7.2"
   }
 }
