--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "twiso",
-  "version": "0.1.0",
+  "version": "0.0.0-development",
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
@@ -38,6 +38,8 @@
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^1.3.0",
+    "@semantic-release/changelog": "^3.0.6",
+    "@semantic-release/git": "^7.0.18",
     "@types/jest": "^24.0.18",
     "@types/node": "^12.7.4",
     "@types/react": "^16.9.2",
@@ -48,6 +50,7 @@
     "eslint-plugin-prettier": "^3.1.0",
     "postcss-cli": "^6.1.3",
     "prettier": "^1.18.2",
+    "semantic-release": "^15.13.31",
     "tailwindcss": "^1.0.5",
     "trakt.tv": "^7.2.0",
     "typescript": "3.7.2"
