--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-helmet": "^5.0.14",
     "@types/react-router-dom": "^5.1.0",
+    "conventional-changelog-atom": "^2.0.3",
     "eslint-config-prettier": "^6.2.0",
     "eslint-plugin-prettier": "^3.1.0",
     "postcss-cli": "^6.1.3",
