--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,12 +1,12 @@
-name: Release version
+name: Deploy to Now
 on:
   push:
     branches:
       - master
 
 jobs:
-  deploy:
-    name: Deploy
+  release:
+    name: Release version
     runs-on: ubuntu-latest
     steps:
       - name: Checkout the repository
@@ -22,3 +22,14 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: npx semantic-release
+
+  deploy:
+    name: Deploy to Now
+    runs-on: ubuntu-latest
+    steps:
+      - name: ZEIT Now Deployment
+        uses: amondnet/now-deployment@v1
+        with:
+          zeit-token: ${{ secrets.ZEIT_TOKEN }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          now-args: '--prod'
