:rocket: fix deploy

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,4 +1,4 @@
-name: Deploy to Now
+name: Version and deploy
 on:
   push:
     branches:
@@ -24,9 +24,12 @@ jobs:
         run: npx semantic-release
 
   deploy:
+    needs: release
     name: Deploy to Now
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout the repository
+        uses: actions/checkout@v1
       - name: ZEIT Now Deployment
         uses: amondnet/now-deployment@v1
         with:
