--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Release
+name: Release and deploy
 on:
   push:
     branches:
@@ -22,3 +22,13 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: npx semantic-release
+      - name: Checkout the repository
+        uses: actions/checkout@v1
+        with:
+          ref: refs/heads/master
+      - name: ZEIT Now Deployment
+        uses: amondnet/now-deployment@v1
+        with:
+          zeit-token: ${{ secrets.ZEIT_TOKEN }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          now-args: '--prod'
