:rocket: fix deploy

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,7 @@ jobs:
       - name: Checkout the repository
         uses: actions/checkout@v1
         with:
+          clean: false
           repository: pouyio/twiso
           ref: refs/heads/master
       - name: ZEIT Now Deployment
