--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "use-query-params": "^0.4.1"
   },
   "scripts": {
+    "analyze": "npm run build && source-map-explorer 'build/static/js/*.js'",
     "tailwind:css": "tailwind build src/tailwind.src.css -c tailwind.js -o src/tailwind.css",
     "start": "npm run tailwind:css && react-scripts start",
     "build": "npm run tailwind:css && postcss ./src/tailwind.css -r --env production && react-scripts build",
@@ -52,6 +53,7 @@
     "postcss-cli": "^6.1.3",
     "prettier": "^1.18.2",
     "semantic-release": "^15.13.31",
+    "source-map-explorer": "^2.2.1",
     "tailwindcss": "^1.0.5",
     "typescript": "3.7.2"
   }
