:rocket: removed click delay

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dexie": "^2.0.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-fastclick": "^3.0.2",
     "react-helmet": "^5.2.1",
     "react-hook-inview": "^4.0.0",
     "react-router-dom": "^5.1.1",
