--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-fastclick": "^3.0.2",
     "react-helmet": "^5.2.1",
     "react-hook-inview": "^4.0.0",
+    "react-image": "^2.3.0",
     "react-router-dom": "^5.1.1",
     "react-scripts": "3.3.0",
     "use-query-params": "^0.4.1"
