--- a/now.json
+++ b/now.json
@@ -1,10 +1,12 @@
 {
-    "build": {
-        "env": {
-            "REACT_APP_TRAKT_API_KEY": "@react_app_trakt_api_key",
-            "REACT_APP_CLIENT_SECRET": "@react_app_client_secret",
-            "REACT_APP_TMDB_API_KEY": "@react_app_tmdb_api_key",
-            "REACT_APP_REDIRECT_URL": "@react_app_redirect_url"
-        }
+  "build": {
+    "env": {
+      "REACT_APP_TRAKT_API_KEY": "@react_app_trakt_api_key",
+      "REACT_APP_CLIENT_SECRET": "@react_app_client_secret",
+      "REACT_APP_TMDB_API_KEY": "@react_app_tmdb_api_key",
+      "REACT_APP_REDIRECT_URL": "@react_app_redirect_url",
+      "NOW_ORG_ID": "@twiso_now_org_id",
+      "NOW_PROJECT_ID": "@twiso_now_project_id"
     }
+  }
 }
