--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "semantic-release": "^17.0.7",
     "typescript": "3.7.3"
   },
-  "license": "ISC"
+  "license": "ISC",
+  "engines": {
+    "node": "^12"
+  }
 }
