--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,9 +15,7 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 12
-      - uses: borales/actions-yarn@v2.0.0
-        with:
-          cmd: install
+      - run: yarn install
       - name: Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
