--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/node": "^12.12.21",
     "@types/react": "^16.9.16",
     "@types/react-dom": "^16.9.4",
+    "conventional-changelog-atom": "^2.0.3",
     "semantic-release": "^17.0.7",
     "typescript": "3.7.3"
   },
