--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.19.2",
     "axios-rate-limit": "^1.2.1",
     "dexie": "^2.0.4",
+    "framer-motion": "^1.10.3",
     "isomorphic-unfetch": "^3.0.0",
     "next": "latest",
     "next-pwa": "^2.3.3",
