--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "isomorphic-unfetch": "^3.0.0",
     "next": "latest",
     "next-pwa": "^2.3.3",
+    "nookies": "^2.2.4",
     "postcss-import": "^12.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
