--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 REACT_APP_TRAKT_API_KEY=
-# REACT_APP_CLIENT_SECRET=
 REACT_APP_TMDB_API_KEY=
 REACT_APP_REDIRECT_URL=
-ENVIRONMENT=
+SENTRY_DSN=
+NODE_ENV=
