--- a/now.json
+++ b/now.json
@@ -3,7 +3,8 @@
     "env": {
       "REACT_APP_TRAKT_API_KEY": "@react_app_trakt_api_key",
       "REACT_APP_TMDB_API_KEY": "@react_app_tmdb_api_key",
-      "REACT_APP_REDIRECT_URL": "@react_app_redirect_url"
+      "REACT_APP_REDIRECT_URL": "@react_app_redirect_url",
+      "SENTRY_DSN": "@sentry_dsn"
     }
   }
 }
