--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "eslint-config-prettier": "^6.2.0",
     "eslint-plugin-prettier": "^3.1.0",
     "express": "^4.17.1",
+    "node-sass": "^4.14.1",
     "prettier": "^1.18.2",
     "semantic-release": "^15.13.31",
     "source-map-explorer": "^2.2.1",
