:sparkles: added advanced search & local filter

--- a/package.json
+++ b/package.json
@@ -12,9 +12,8 @@
     "react-fastclick": "^3.0.2",
     "react-helmet": "^5.2.1",
     "react-hook-inview": "^4.0.0",
-    "react-hotkeys": "^2.0.0",
     "react-image": "^2.3.0",
-    "react-outside-click-handler": "^1.3.0",
+    "react-longpressable": "^1.1.1",
     "react-router-cache-route": "^1.8.4",
     "react-router-dom": "^5.1.1",
     "react-scripts": "3.4.0",
