--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "2.1.5",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.3.6",
     "axios": "^0.19.0",
     "axios-rate-limit": "^1.2.1",
     "dexie": "^2.0.4",
@@ -63,7 +64,7 @@
     "eslint-plugin-prettier": "^3.1.0",
     "express": "^4.17.1",
     "node-sass": "^4.14.1",
-    "prettier": "^1.18.2",
+    "prettier": "^2.0.5",
     "semantic-release": "^15.13.31",
     "source-map-explorer": "^2.2.1",
     "tailwindcss": "^1.4.6",
