--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-hook-inview": "^4.0.0",
     "react-image": "^2.3.0",
     "react-longpressable": "^1.1.1",
+    "react-redux": "^7.2.0",
     "react-router-cache-route": "^1.8.4",
     "react-router-dom": "^5.1.1",
     "react-scripts": "3.4.0",
@@ -57,6 +58,7 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-helmet": "^5.0.14",
     "@types/react-outside-click-handler": "^1.3.0",
+    "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.0",
     "conventional-changelog-atom": "^2.0.3",
     "cra-append-sw": "^2.7.0",
