--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.3.6",
+    "@sentry/react": "^5.19.0",
     "axios": "^0.19.0",
     "axios-rate-limit": "^1.2.1",
     "dexie": "^2.0.4",
