:rocket: update vercel deploy

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -15,14 +15,14 @@ jobs:
           clean: false
           repository: pouyio/twiso
           ref: refs/heads/master
-      - name: ZEIT Now Deployment
-        uses: amondnet/now-deployment@v2
+      - name: Vercel Now Deployment
+        uses: amondnet/vercel-action@v19
         with:
-          zeit-token: ${{ secrets.ZEIT_TOKEN }}
+          vercel-token: ${{ secrets.VERCEL_TOKEN }}
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          now-args: '--prod'
-          now-org-id: ${{ secrets.NOW_ORG_ID }}
-          now-project-id: ${{ secrets.NOW_PROJECT_ID }}
+          vercel-args: '--prod'
+          vercel-org-id: ${{ secrets.NOW_ORG_ID }}
+          vercel-project-id: ${{ secrets.NOW_PROJECT_ID }}
 
   createSentryRelease:
     name: Add Sentry release
