--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.3.6",
     "@sentry/react": "^5.19.0",
+    "@types/react-big-calendar": "^0.24.5",
     "axios": "^0.19.0",
     "axios-rate-limit": "^1.2.1",
+    "date-fns": "^2.15.0",
     "dexie": "^2.0.4",
     "fuse.js": "^5.2.3",
     "query-string": "^6.13.1",
     "react": "^16.8.6",
+    "react-big-calendar": "^0.26.0",
     "react-dom": "^16.8.6",
     "react-fastclick": "^3.0.2",
     "react-helmet": "^6.1.0",
