--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -23,6 +23,7 @@ jobs:
           vercel-args: '--prod'
           vercel-org-id: ${{ secrets.NOW_ORG_ID }}
           vercel-project-id: ${{ secrets.NOW_PROJECT_ID }}
+          working-directory: ./
 
   createSentryRelease:
     name: Add Sentry release
