--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -41,3 +41,4 @@ jobs:
         with:
           tagName: ${{ github.ref }}
           environment: prod
+          sourceMapOptions: '{"include": ["build"]}'
