--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -15,6 +15,8 @@ jobs:
           clean: false
           repository: pouyio/twiso
           ref: refs/heads/master
+      - name: Build artifact
+        run: npm run build
       - name: Vercel Now Deployment
         uses: amondnet/vercel-action@v19
         with:
