--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -15,9 +15,9 @@ jobs:
           clean: false
           repository: pouyio/twiso
           ref: refs/heads/master
-      - uses: borales/actions-yarn@v2.0.0
-          with:
-            cmd: install
+        uses: borales/actions-yarn@v2.0.0
+        with:
+          cmd: install
       - uses: borales/actions-yarn@v2.0.0
         with:
           cmd: build
