--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -15,7 +15,7 @@ jobs:
           clean: false
           repository: pouyio/twiso
           ref: refs/heads/master
-        uses: borales/actions-yarn@v2.0.0
+      - uses: borales/actions-yarn@v2.0.0
         with:
           cmd: install
       - uses: borales/actions-yarn@v2.0.0
