--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios-rate-limit": "^1.2.1",
     "date-fns": "^2.15.0",
     "dexie": "^2.0.4",
+    "framer-motion": "^2.6.6",
     "fuse.js": "^5.2.3",
     "query-string": "^6.13.1",
     "react": "^16.8.6",
@@ -65,6 +66,7 @@
     "@types/react-outside-click-handler": "^1.3.0",
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.0",
+    "@types/resize-observer-browser": "^0.1.3",
     "conventional-changelog-atom": "^2.0.3",
     "cra-append-sw": "^2.7.0",
     "eslint-config-prettier": "^6.2.0",
