--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -15,12 +15,12 @@ jobs:
           clean: false
           repository: pouyio/twiso
           ref: refs/heads/master
-      - uses: borales/actions-yarn@v2.0.0
+      - name: Setup Node.js & yarn
+        uses: actions/setup-node@v1
         with:
-          cmd: install
-      - uses: borales/actions-yarn@v2.0.0
-        with:
-          cmd: build
+          node-version: 14
+        run: yarn install
+        run: yarn build
       - name: Vercel Now Deployment
         uses: amondnet/vercel-action@v19
         with:
