--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -19,8 +19,8 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 14
-        run: yarn install
-        run: yarn build
+      - run: yarn install
+      - run: yarn build
       - name: Vercel Now Deployment
         uses: amondnet/vercel-action@v19
         with:
