--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "framer-motion": "^2.6.6",
     "fuse.js": "^5.2.3",
     "query-string": "^6.13.1",
+    "ramda": "^0.27.1",
     "react": "^16.8.6",
     "react-big-calendar": "^0.26.0",
     "react-dom": "^16.8.6",
@@ -60,6 +61,7 @@
     "@types/express": "^4.17.6",
     "@types/jest": "^24.0.18",
     "@types/node": "^12.7.4",
+    "@types/ramda": "^0.27.20",
     "@types/react": "^16.9.2",
     "@types/react-big-calendar": "^0.24.5",
     "@types/react-dom": "^16.9.0",
