--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.1",
-    "@sentry/react": "^5.24.2",
+    "@sentry/react": "6.11.0",
     "axios": "^0.21.1",
     "axios-rate-limit": "^1.2.1",
     "bottleneck": "^2.19.5",
@@ -58,7 +58,7 @@
     "@now/node": "^1.5.1",
     "@semantic-release/changelog": "^3.0.6",
     "@semantic-release/git": "^7.0.18",
-    "@sentry/browser": "^5.24.2",
+    "@sentry/browser": "6.11.0",
     "@types/express": "^4.17.6",
     "@types/jest": "^24.0.18",
     "@types/node": "^12.7.4",
