--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.1",
     "@sentry/react": "6.11.0",
+    "@sentry/tracing": "^6.11.0",
     "axios": "^0.21.1",
     "axios-rate-limit": "^1.2.1",
     "bottleneck": "^2.19.5",
