--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bottleneck": "^2.19.5",
     "date-fns": "^2.15.0",
     "dexie": "^3.0.3",
+    "fast-deep-equal": "^3.1.3",
     "framer-motion": "^2.6.6",
     "fuse.js": "^5.2.3",
     "query-string": "^6.13.1",
@@ -77,6 +78,7 @@
     "eslint-config-prettier": "^6.2.0",
     "eslint-plugin-prettier": "^3.1.0",
     "express": "^4.17.1",
+    "json-diff": "^0.5.4",
     "node-sass": "^4.14.1",
     "prettier": "^2.0.5",
     "semantic-release": "^17.2.3",
