--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "prettier": "^2.0.5",
     "semantic-release": "^19.0.3",
     "source-map-explorer": "^2.2.1",
-    "tailwindcss": "^3.0.5",
+    "tailwindcss": "3.1.8",
     "typescript": "^4.0.2"
   },
   "eslintConfig": {
