:rocket: moved from cra to vite

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-REACT_APP_TRAKT_API_KEY=
-REACT_APP_TMDB_API_KEY=
-REACT_APP_REDIRECT_URL=
+VITE_TRAKT_API_KEY=
+VITE_TMDB_API_KEY=
+VITE_REDIRECT_URL=
 SENTRY_DSN=
