--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 
 # production
 /build
+/dist
 
 # misc
 .DS_Store
@@ -42,3 +43,6 @@ now.json
 **/public/workbox-*.js.map
 **/public/worker-*.js.map
 .vercel
+
+stats.html
+/dev-dist
