--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "tailwindcss": "3.1.8",
     "typescript": "^4.0.2",
     "vite": "^4.2.1",
+    "vite-plugin-environment": "^1.1.3",
     "vite-plugin-pwa": "^0.14.6",
     "vite-tsconfig-paths": "^4.0.7"
   },
