--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "noImplicitAny": false,
     "target": "ESNext",
     "lib": ["dom", "dom.iterable", "esnext"],
-    "types": ["vite/client", "vite-plugin-pwa/client"],
+    "types": ["vite/client", "vite-plugin-pwa/client", "node"],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
