--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -56,4 +56,4 @@ jobs:
         with:
           version: ${{ github.event.release.tag_name }}
           environment: prod
-          sourcemaps: './build'
+          sourcemaps: './build/assets'
