:rocket: fix server

--- a/vercel.json
+++ b/vercel.json
@@ -7,6 +7,10 @@
   },
   "rewrites": [
     {
+      "source": "/movie/:id",
+      "destination": "/api/server"
+    },
+    {
       "source": "/(.*)",
       "destination": "/index.html"
     }
