--- a/.github/workflows/deno-deploy.yml
+++ b/.github/workflows/deno-deploy.yml
@@ -14,7 +14,8 @@ jobs:
         uses: actions/checkout@v3
 
       # TODO: add a build step here
-      - run: npm run build
+      - run: yarn
+      - run: yarn build
 
       - name: Upload to Deno Deploy
         uses: denoland/deployctl@v1
