--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "twiso",
   "version": "2.8.10",
   "private": true,
+  "type": "module",
   "scripts": {
     "analyze": "npm run build && source-map-explorer 'build/assets/*.js'",
     "tailwind:css": "tailwind build -i ./src/tailwind.src.css -o ./src/tailwind.css",
@@ -14,7 +15,6 @@
     "@reduxjs/toolkit": "^1.8.1",
     "@sentry/react": "7.45.0",
     "@sentry/tracing": "7.45.0",
-    "@vercel/og": "^0.4.1",
     "axios": "^0.21.2",
     "axios-rate-limit": "^1.2.1",
     "bottleneck": "^2.19.5",
@@ -69,6 +69,7 @@
     "semantic-release": "^19.0.3",
     "tailwindcss": "3.1.8",
     "typescript": "^4.0.2",
+    "vercel": "^28.18.2",
     "vite": "^4.2.1",
     "vite-plugin-environment": "^1.1.3",
     "vite-plugin-pwa": "^0.14.6",
