--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@reduxjs/toolkit": "^1.8.1",
     "@sentry/react": "7.45.0",
     "@sentry/tracing": "7.45.0",
-    "@vercel/node": "^2.10.1",
     "axios": "^0.21.2",
     "axios-rate-limit": "^1.2.1",
     "bottleneck": "^2.19.5",
@@ -40,6 +39,7 @@
     "scroll-behavior-polyfill": "^2.0.13"
   },
   "devDependencies": {
+    "@netlify/functions": "^1.4.0",
     "@now/node": "^1.5.1",
     "@semantic-release/changelog": "^5.0.0",
     "@semantic-release/git": "^9.0.0",
