:rocket: fix server

--- a/netlify.toml
+++ b/netlify.toml
@@ -3,5 +3,15 @@
   to = "/.netlify/functions/server"
   status = 200
 
+[[redirects]]
+  from = "/show/*"
+  to = "/.netlify/functions/server"
+  status = 200
+
+[[redirects]]
+  from = "/person/*"
+  to = "/.netlify/functions/server"
+  status = 200
+
 [functions]
   included_files = ["build/index.html"]
