--- a/package.json
+++ b/package.json
@@ -68,9 +68,8 @@
     "rollup-plugin-visualizer": "^5.9.0",
     "sass": "^1.60.0",
     "semantic-release": "^19.0.3",
-    "tailwindcss": "3.1.8",
-    "typescript": "^4.0.2",
-    "vercel": "^28.18.2",
+    "tailwindcss": "3.3.0",
+    "typescript": "5.0.2",
     "vite": "^4.2.1",
     "vite-plugin-environment": "^1.1.3",
     "vite-plugin-pwa": "^0.14.6",
