:rocket: fix server

--- a/netlify.toml
+++ b/netlify.toml
@@ -13,5 +13,10 @@
   to = "/.netlify/functions/server"
   status = 200
 
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
+
 [functions]
   included_files = ["build/index.html"]
