--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "@reduxjs/toolkit": "^1.8.1",
     "@sentry/react": "7.45.0",
     "@sentry/tracing": "7.45.0",
-    "axios": "^0.21.2",
-    "axios-rate-limit": "^1.2.1",
+    "axios": "1.5.1",
+    "axios-rate-limit": "1.3.0",
     "bottleneck": "^2.19.5",
     "date-fns": "^2.15.0",
     "dexie": "^3.2.2",
@@ -58,17 +58,17 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
     "json-diff": "^0.5.4",
-    "node-sass": "^7.0.1",
     "postcss": "^8.4.5",
     "prettier": "^2.0.5",
     "rollup-plugin-visualizer": "^5.9.0",
     "sass": "^1.60.0",
     "semantic-release": "^19.0.3",
-    "tailwindcss": "3.3.0",
+    "tailwindcss": "3.4.1",
     "typescript": "5.0.2",
     "vite": "^4.2.1",
     "vite-plugin-environment": "^1.1.3",
     "vite-plugin-pwa": "^0.14.6",
+    "vite-plugin-svgr": "^4.2.0",
     "vite-tsconfig-paths": "^4.0.7"
   },
   "eslintConfig": {
