--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "twiso",
   "version": "2.9.4",
   "private": true,
+  "type": "module",
   "scripts": {
     "analyze": "npm run build && source-map-explorer 'build/assets/*.js'",
-    "tailwind:css": "tailwind build -i ./src/tailwind.src.css -o ./src/tailwind.css",
-    "start": "npm run tailwind:css && vite",
-    "build": "NODE_ENV=production npm run tailwind:css && tsc && vite build",
+    "start": "vite",
+    "build": "NODE_ENV=production tsc && vite build",
     "now-build": "npm run build"
   },
   "dependencies": {
@@ -65,9 +65,9 @@
     "semantic-release": "^19.0.3",
     "tailwindcss": "3.4.1",
     "typescript": "5.0.2",
-    "vite": "^4.2.1",
+    "vite": "^5.0.8",
     "vite-plugin-environment": "^1.1.3",
-    "vite-plugin-pwa": "^0.14.6",
+    "vite-plugin-pwa": "0.18.0",
     "vite-plugin-svgr": "^4.2.0",
     "vite-tsconfig-paths": "^4.0.7"
   },
