--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -11,10 +11,10 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-      - name: Download build artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: build
+      # - name: Download build artifact
+      #   uses: actions/download-artifact@v3
+      #   with:
+      #     name: build
       - name: Create a Sentry.io release
         uses: getsentry/action-release@v1
         env:
