--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "query-string": "^6.13.1",
     "ramda": "^0.27.1",
     "react": "^18.0.0",
-    "react-big-calendar": "^0.40.1",
+    "react-big-calendar": "1.15.0",
     "react-dom": "^18.0.0",
     "react-fastclick": "^3.0.2",
     "react-helmet": "^6.1.0",
@@ -45,7 +45,7 @@
     "@types/node": "^12.7.4",
     "@types/ramda": "^0.27.20",
     "@types/react": "^18.0.0",
-    "@types/react-big-calendar": "^0.38.0",
+    "@types/react-big-calendar": "1.15.0",
     "@types/react-dom": "^18.0.0",
     "@types/react-helmet": "^6.1.5",
     "@types/react-outside-click-handler": "^1.3.0",
