--- a/package.json
+++ b/package.json
@@ -23,15 +23,15 @@
     "fuse.js": "^5.2.3",
     "query-string": "^6.13.1",
     "ramda": "^0.27.1",
-    "react": "^18.0.0",
+    "react": "19.0.0",
     "react-big-calendar": "1.15.0",
-    "react-dom": "^18.0.0",
+    "react-dom": "19.0.0",
     "react-fastclick": "^3.0.2",
     "react-helmet": "^6.1.0",
     "react-hook-inview": "^4.0.0",
     "react-image": "4.1.0",
     "react-longpressable": "^1.1.1",
-    "react-redux": "^8.0.1",
+    "react-redux": "9.1.2",
     "react-router-dom": "^6.3.0",
     "scroll-behavior-polyfill": "^2.0.13"
   },
@@ -44,13 +44,12 @@
     "@types/jest": "^24.0.18",
     "@types/node": "^12.7.4",
     "@types/ramda": "^0.27.20",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
+    "@types/react": "19.0.0",
+    "@types/react-dom": "19.0.0",
     "@types/react-helmet": "^6.1.5",
     "@types/react-outside-click-handler": "^1.3.0",
-    "@types/react-redux": "^7.1.23",
     "@types/resize-observer-browser": "^0.1.3",
-    "@vitejs/plugin-react": "^3.1.0",
+    "@vitejs/plugin-react": "4.3.4",
     "autoprefixer": "^10.4.0",
     "conventional-changelog-atom": "^2.0.3",
     "cra-append-sw": "^2.7.0",
