--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,13 +11,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout the repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 20
-      - run: yarn install
+          node-version: 22
+      - name: Setup bun
+        uses: oven-sh/setup-bun@v2
+      - run: bun install
       - name: Release
         env:
           GITHUB_TOKEN: ${{ secrets.TWISO_DEPLOY_TOKEN }}
-        run: npx semantic-release
+        run: bunx semantic-release
