--- a/package.json
+++ b/package.json
@@ -10,21 +10,20 @@
     "now-build": "npm run build"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^1.8.1",
-    "@sentry/react": "7.119.2",
-    "@sentry/tracing": "7.119.2",
+    "@reduxjs/toolkit": "2.4.0",
+    "@sentry/react": "8.42.0",
     "axios": "1.7.4",
     "axios-rate-limit": "1.3.0",
     "bottleneck": "^2.19.5",
     "date-fns": "^2.15.0",
     "dexie": "^3.2.2",
     "fast-deep-equal": "^3.1.3",
-    "framer-motion": "^6.2.8",
     "fuse.js": "^5.2.3",
+    "motion": "12.0.0-alpha.2",
     "query-string": "^6.13.1",
-    "ramda": "^0.27.1",
+    "ramda": "0.30.1",
     "react": "19.0.0",
-    "react-big-calendar": "1.15.0",
+    "react-big-calendar": "1.16.3",
     "react-dom": "19.0.0",
     "react-fastclick": "^3.0.2",
     "react-helmet": "^6.1.0",
@@ -36,23 +35,21 @@
     "scroll-behavior-polyfill": "^2.0.13"
   },
   "devDependencies": {
-    "@netlify/functions": "^1.4.0",
+    "@netlify/functions": "2.8.2",
     "@now/node": "^1.5.1",
     "@semantic-release/changelog": "^5.0.0",
     "@semantic-release/git": "^9.0.0",
     "@sentry/browser": "7.119.2",
     "@types/jest": "^24.0.18",
-    "@types/node": "^12.7.4",
-    "@types/ramda": "^0.27.20",
+    "@types/ramda": "0.30.1",
     "@types/react": "19.0.0",
     "@types/react-dom": "19.0.0",
-    "@types/react-helmet": "^6.1.5",
+    "@types/react-helmet": "6.1.11",
     "@types/react-outside-click-handler": "^1.3.0",
     "@types/resize-observer-browser": "^0.1.3",
     "@vitejs/plugin-react": "4.3.4",
     "autoprefixer": "^10.4.0",
     "conventional-changelog-atom": "^2.0.3",
-    "cra-append-sw": "^2.7.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
     "json-diff": "^0.5.4",
@@ -62,7 +59,7 @@
     "sass": "^1.60.0",
     "semantic-release": "^19.0.3",
     "tailwindcss": "3.4.1",
-    "typescript": "5.0.2",
+    "typescript": "5.7.2",
     "vite": "^5.1.8",
     "vite-plugin-environment": "^1.1.3",
     "vite-plugin-pwa": "0.18.0",
