--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "analyze": "npm run build && source-map-explorer 'build/assets/*.js'",
     "start": "vite",
-    "build": "NODE_ENV=production tsc && vite build",
-    "now-build": "npm run build"
+    "build": "NODE_ENV=production tsc && vite build"
   },
   "dependencies": {
     "@reduxjs/toolkit": "2.4.0",
@@ -36,7 +35,6 @@
   },
   "devDependencies": {
     "@netlify/functions": "2.8.2",
-    "@now/node": "^1.5.1",
     "@semantic-release/changelog": "^5.0.0",
     "@semantic-release/git": "^9.0.0",
     "@sentry/browser": "7.119.2",
