--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/react-outside-click-handler": "^1.3.0",
     "@types/resize-observer-browser": "^0.1.3",
     "@vitejs/plugin-react": "4.3.4",
+    "autoprefixer": "^10.4.20",
     "conventional-changelog-atom": "^2.0.3",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
