--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "@reduxjs/toolkit": "2.4.0",
     "@sentry/react": "8.42.0",
     "axios": "1.7.4",
-    "axios-rate-limit": "1.3.0",
+    "axios-rate-limit": "1.4.0",
     "bottleneck": "^2.19.5",
-    "date-fns": "^2.15.0",
+    "date-fns": "4.1.0",
     "dexie": "^3.2.2",
     "fast-deep-equal": "^3.1.3",
     "fuse.js": "^5.2.3",
@@ -22,7 +22,7 @@
     "query-string": "^6.13.1",
     "ramda": "0.30.1",
     "react": "19.0.0",
-    "react-big-calendar": "1.16.3",
+    "react-big-calendar": "1.17.1",
     "react-dom": "19.0.0",
     "react-fastclick": "^3.0.2",
     "react-helmet": "^6.1.0",
@@ -37,7 +37,6 @@
     "@semantic-release/changelog": "^5.0.0",
     "@semantic-release/git": "^9.0.0",
     "@sentry/browser": "7.119.2",
-    "@types/jest": "^24.0.18",
     "@types/ramda": "0.30.1",
     "@types/react": "19.0.0",
     "@types/react-dom": "19.0.0",
