--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "react-hook-inview": "^4.0.0",
     "react-longpressable": "^1.1.1",
     "react-redux": "9.1.2",
-    "react-router-dom": "^6.3.0",
+    "react-router": "^7.1.3",
     "scroll-behavior-polyfill": "^2.0.13"
   },
   "devDependencies": {
