--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "dexie": "^3.2.2",
     "fast-deep-equal": "^3.1.3",
     "fuse.js": "^5.2.3",
-    "motion": "12.0.0-alpha.2",
+    "motion": "12.0.6",
     "query-string": "^6.13.1",
     "ramda": "0.30.1",
     "react": "19.0.0",
@@ -37,6 +37,7 @@
     "@semantic-release/changelog": "^5.0.0",
     "@semantic-release/git": "^9.0.0",
     "@sentry/browser": "7.119.2",
+    "@tailwindcss/vite": "4.0.1",
     "@types/ramda": "0.30.1",
     "@types/react": "19.0.0",
     "@types/react-dom": "19.0.0",
@@ -44,7 +45,6 @@
     "@types/react-outside-click-handler": "^1.3.0",
     "@types/resize-observer-browser": "^0.1.3",
     "@vitejs/plugin-react": "4.3.4",
-    "autoprefixer": "^10.4.20",
     "conventional-changelog-atom": "^2.0.3",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
@@ -52,7 +52,7 @@
     "prettier": "^2.0.5",
     "rollup-plugin-visualizer": "^5.9.0",
     "semantic-release": "^19.0.3",
-    "tailwindcss": "3.4.17",
+    "tailwindcss": "4.0.0",
     "typescript": "5.7.2",
     "vite": "^5.1.8",
     "vite-plugin-environment": "^1.1.3",
