--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "axios-rate-limit": "1.4.0",
     "bottleneck": "^2.19.5",
     "date-fns": "4.1.0",
-    "dexie": "^3.2.2",
-    "dexie-react-hooks": "^1.1.7",
+    "dexie": "4.0.11",
+    "dexie-react-hooks": "1.1.7",
     "fast-deep-equal": "^3.1.3",
     "fuse.js": "^5.2.3",
     "motion": "^11.0.0",
