--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-hook-inview": "4.5.1",
     "react-redux": "9.2.0",
     "react-router": "^7.1.3",
-    "scroll-behavior-polyfill": "^2.0.13"
+    "scroll-behavior-polyfill": "^2.0.13",
+    "use-long-press": "3.3.0"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20250303.0",
